# outdoor_refrigerators

./: .dockerignore  .env.example  Caddyfile  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
outdoor_refrigerators/: asgi.py  settings.py  urls.py  wsgi.py
report/: admin.py  api_urls.py  api_views.py  clustering.py  forms.py  models.py  serializers.py  service.py  urls.py  views.py
report/management/commands/: generate_test_data.py  import_refrigerators.py  import_users.py
report/migrations/: 0001_initial.py  0002_alter_refrigerator_is_assigned.py  0002_initial.py  0003_alter_report_status.py  0003_report_manager_review.py  0004_alter_report_options_alter_photo_image_and_more.py  0004_report_sender.py  0005_alter_report_sender.py  0005_photo_latitude_photo_longitude_alter_photo_image.py  0006_alter_photo_image_alter_report_sender.py
report/templates/: base.html
report/templates/admin/: assign_user.html  exif_meta.html
report/templates/report/: cluster_map.html  create_report.html  index.html  manager_refrigerators.html  map.html  (+4 more)
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_managers.py  0002_customuser_is_manager.py  0003_alter_customuser_username.py  0003_remove_customuser_photo_alter_customuser_is_manager.py  0004_alter_customuser_username.py  0004_customuser_photo.py  0005_alter_customuser_employee_code.py  0005_remove_customuser_username.py  0006_customuser_manager.py  0006_customuser_photo.py  0007_alter_customuser_manager.py
(+9 files in other folders)
