[project]
name = "outdoor-refrigerators"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-config-url>=0.1.1",
    "django==5.0.6",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
    "environs==11.0.0",
    "exif>=1.6.1",
    "exifread>=3.5.1",
    "folium>=0.20.0",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pillow-heif>=1.3.0",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "xlrd>=2.0.2",
]
